# nz-wreck-analysis

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build_lint_test.yml
requirements/: ci-requirements.txt  requirements.txt
scripts/: compile-requirements.sh  dev-setup.sh
src/nz_wreck_analysis/: clean.py  data.py  domain.py  test.py
src/scripts/: analysis.py
